Changed column width for description

--- a/LMS System/Views/Courses/Index.cshtml
+++ b/LMS System/Views/Courses/Index.cshtml
@@ -19,7 +19,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th>
+        <th class="descriptioncolumn">
             @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
@@ -28,7 +28,7 @@
         <th>
             @Html.DisplayNameFor(model => model.EndDate)
         </th>
-        <th>Adminitration</th>
+        <th>Administration</th>
     </tr>
 
 @foreach (var item in Model) {
@@ -53,18 +53,17 @@
                 {
 
                     @*@Html.Action("CourseTeacherView","Accounts" )*@
-                    <div class="col-md-3"> @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default btn-xs" }) </div>
-                    <div class="col-md-3">@Html.ActionLink("Details", "Details", "Courses", new { id = item.Id }, new { @class = "btn btn-default btn-xs" }) </div>
-                    <div class="col-md-3"> @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })</div>
-
+                    <div class="col-md-3">@Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })</div>
+                    <div class="col-md-3">@Html.ActionLink("Details", "Details", "Courses", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })</div>
+                    <div class="col-md-3">@Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })</div>
                 }
                 else
                 {
                     <div class="col-md-3">
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
                     </div>
                 }
-            </div>
+             </div>
 
 </td>
     </tr>
