--- a/LMS System/Content/Site.css
+++ b/LMS System/Content/Site.css
@@ -3,6 +3,7 @@
     padding-bottom: 20px;
 }
 
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -38,4 +39,9 @@ tr.found{
 
 .weekendtype{
     color: red;
+}
+
+.descriptioncolumn
+{
+    width: 40%;
 }
