--- a/LMS System/Views/Courses/Schedule.cshtml
+++ b/LMS System/Views/Courses/Schedule.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Schedule</h2>
 
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Date)
@@ -77,7 +77,6 @@
 
                             }
 
-            <td></td>
             </tr>
         }
         else
@@ -103,14 +102,14 @@
                 }
                 <td></td>
                 <td></td>
-                <td></td>
+
             </tr>
 
 
             if(item.Date.DayOfWeek == DayOfWeek.Sunday)
             {
                 <tr>
-                    <td colspan="5"><b>Week: @ApplicationHelpers.WeekNumber(item.Date.AddDays(1))</b></td>
+                    <td colspan="4"><b>Week: @ApplicationHelpers.WeekNumber(item.Date.AddDays(1))</b></td>
 
                 </tr>
                                 }
