--- a/LMS System/Views/Account/Login.cshtml
+++ b/LMS System/Views/Account/Login.cshtml
@@ -28,7 +28,7 @@
                             </div>
                             <div class="checkbox">
                                 <label>
-                                    @Html.CheckBoxFor(m => m.RememberMe)
+                                    @Html.CheckBoxFor(m => m.RememberMe) Remember me
                                 </label>
                             </div>
                             <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
