Print button on schedule

--- a/LMS System/Views/Courses/Schedule.cshtml
+++ b/LMS System/Views/Courses/Schedule.cshtml
@@ -5,6 +5,10 @@
 }
 
 <h2>Schedule</h2>
+<div>
+    <a href="#" onClick="window.print()" class="btn btn-default">Print schedule</a>
+    <br/><br />
+</div>
 
 <table class="table table-striped table-bordered">
     <tr>
