--- a/LMS System/Views/Courses/Schedule.cshtml
+++ b/LMS System/Views/Courses/Schedule.cshtml
@@ -5,9 +5,9 @@
 }
 
 <h2>Schedule</h2>
-<div>
-    <a href="#" onClick="window.print()" class="btn btn-default">Print schedule</a>
-    <br/><br />
+<div  class="btn btn-default">
+    <span class="glyphicon glyphicon-print"></span>
+    <a href="#" onClick="window.print()">Print schedule</a>
 </div>
 
 <table class="table table-striped table-bordered">
@@ -24,7 +24,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Activityname)
         </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
