--- a/LMS System/Views/Courses/IndexFiles.cshtml
+++ b/LMS System/Views/Courses/IndexFiles.cshtml
@@ -72,10 +72,25 @@
             @if (ViewBag.parentId != null)
             {
                 int? parentId = ViewBag.parentId;
-                <div class="row">
-                    <div class="col-md-3">@Html.ActionLink("Delete", "DeleteFile", new { id = item.Id, parentId = ViewBag.parentId }, new { @class = "btn btn-default btn-xs" })</div>
-                    <div class="col-md-3">@Html.ActionLink("Edit", "EditFile", new { id = item.Id, parentId = ViewBag.parentId }, new { @class = "btn btn-default btn-xs" })</div>
-                </div>
+
+
+
+                if (User.Identity.IsAuthenticated)
+                {
+
+                    if (User.IsInRole("teacher"))
+                    {
+
+                        <div class="row">
+                            <div class="col-md-3">@Html.ActionLink("Delete", "DeleteFile", new { id = item.Id, parentId = ViewBag.parentId }, new { @class = "btn btn-default btn-xs" })</div>
+                            <div class="col-md-3">@Html.ActionLink("Edit", "EditFile", new { id = item.Id, parentId = ViewBag.parentId }, new { @class = "btn btn-default btn-xs" })</div>
+                        </div>
+                    }
+
+                }
+
+
+
             }
         </td>
     </tr>
