--- a/LMS System/Views/Modules/Details.cshtml
+++ b/LMS System/Views/Modules/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h3>Details for module @Model.Name</h3>
 
-@Html.ActionLink("Show files", "IndexFiles", new { parentId = Model.Id }, new { @class = "btn btn-default" })
+@Html.ActionLink("Upload or view files", "IndexFiles", new { parentId = Model.Id }, new { @class = "btn btn-default" })
 
 @if (User.IsInRole("teacher"))
 {
