--- a/LMS System/Views/Courses/Schedule.cshtml
+++ b/LMS System/Views/Courses/Schedule.cshtml
@@ -3,26 +3,29 @@
 @{
     ViewBag.Title = "Schedule";
 }
-
+<head>
+    <link rel="stylesheet" href="~/Content/CourseDetails.css" type="text/css" />
+</head>
 <h2>Schedule</h2>
 
-<table class="table table-striped">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-        <th>
-            Day
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Modulename)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Activityname)
-        </th>
-        <th></th>
-    </tr>
-
+<table class="table lms">
+    <thead>
+        <tr style="color:white">
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            <th>
+                Day
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Modulename)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Activityname)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
 @foreach (var item in Model) {
 
 
