--- a/LMS System/Content/Site.css
+++ b/LMS System/Content/Site.css
@@ -60,9 +60,14 @@ tr.found{
 .show
 {
 
-     padding-top: 90px;
+     padding-top: 20px;
      padding-bottom: 90px;
    
+}
+
+h1 {
+
+    color: blue;
 }
 
 
