--- a/LMS System/Views/Modules/Details.cshtml
+++ b/LMS System/Views/Modules/Details.cshtml
@@ -4,96 +4,105 @@
     ViewBag.Title = "Details";
 }
 
-<h3>Details for module @Model.Name</h3>
+<h3>@Model.Name</h3>
 
-
-
-@if (User.IsInRole("teacher"))
-{
-       @Html.ActionLink("Create New Activity", "Create", "Activities", new { ModuleId = Model.Id }, new { @class = "btn btn-default" })
-}
-&nbsp;@Html.ActionLink("Upload or view files", "IndexFiles", new { parentId = Model.Id }, new { @class = "btn btn-default" })
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Activities)
-        </dt>
-
-        <dd>
-            <table>
-                @foreach (var activity in Model.Activities)
-            {
-
-           <tr>
-            <td class="tablemargin">@Html.ActionLink(activity.Name, "Details", "Activities", new { id = activity.Id }, null)</td>
-            <td class="tablemargin">@activity.StartDate.ToShortDateString() - @activity.EndDate.ToShortDateString()</td>
-            <td class="tablemargin">@activity.Days days</td>
-
-                    
-         <td class="tablemargin">
-@if (User.IsInRole("teacher"))
-{
-    @Html.ActionLink("Edit", "Edit", "Activities", new { id = activity.Id }, null) <span> | </span>
-    @Html.ActionLink("Delete", "Delete", "Activities", new { id = activity.Id, courseID = Model.Id }, null)
-}
-    </td>
-    @if (Model.StartDate > activity.StartDate || Model.EndDate < activity.EndDate || activity.StartDate > activity.EndDate)
-       {
-           <td class="tablemargin">
-            Some dates are out of boundry!
-            </td>
-       }
-
-
-</tr>
-
-                }
-            </table>
-
-        </dd>
-
-
-
-    </dl>
-</div>
-
-<p>
+<div class="control">
     @if (User.IsInRole("teacher"))
     {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id })        <span> | </span>
+    
+            @Html.ActionLink("Create New Activity", "Create", "Activities", new { ModuleId = Model.Id }, new { @class = "btn btn-default" })
+       
     }
-    @Html.ActionLink("Back to Course Details", "Details", "Courses", new { Id = Model.CourseId }, null)
-</p>
+
+    &nbsp;@Html.ActionLink("Upload or view files", "IndexFiles", new { parentId = Model.Id }, new { @class = "btn btn-default" })
+   </div>
+
+
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.HiddenFor(model => model.Name)
+                @*@Html.DisplayNameFor(model => model.Name)*@
+            </dt>
+
+            <dd>
+              
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+
+            <dt>
+                Start and end dates
+            </dt>
+            <dd class="dates">
+
+                <div class="startdate">
+                    @Html.DisplayNameFor(model => model.StartDate)
+                    @Html.DisplayFor(model => model.StartDate)
+                </div>
+                <div class="enddate">
+                    @Html.DisplayNameFor(model => model.EndDate)
+                    @Html.DisplayFor(model => model.EndDate)
+                </div>
+            </dd>
+            <dt>
+
+            </dt>
+
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Activities)
+            </dt>
+
+            <dd>
+                <table>
+                    @foreach (var activity in Model.Activities)
+                    {
+
+                        <tr>
+                            <td class="tablemargin">@Html.ActionLink(activity.Name, "Details", "Activities", new { id = activity.Id }, null)</td>
+                            <td class="tablemargin">@activity.StartDate.ToShortDateString() - @activity.EndDate.ToShortDateString()</td>
+                            <td class="tablemargin">@activity.Days days</td>
+
+
+                            <td class="tablemargin">
+                                @if (User.IsInRole("teacher"))
+                                {
+                                    @Html.ActionLink("Edit", "Edit", "Activities", new { id = activity.Id }, null) <span> | </span>
+                                        @Html.ActionLink("Delete", "Delete", "Activities", new { id = activity.Id, courseID = Model.Id }, null)
+                                }
+                            </td>
+                            @if (Model.StartDate > activity.StartDate || Model.EndDate < activity.EndDate || activity.StartDate > activity.EndDate)
+                            {
+                                <td class="tablemargin">
+                                    Some dates are out of boundry!
+                                </td>
+                            }
+
+
+                        </tr>
+
+                    }
+                </table>
+
+            </dd>
+
+
+
+        </dl>
+    </div>
+
+    <p>
+        @if (User.IsInRole("teacher"))
+            {
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id })        <span> | </span>
+        }
+        @Html.ActionLink("Back to Course Details", "Details", "Courses", new { Id = Model.CourseId }, null)
+    </p>
