--- a/LMS System/Views/Activities/Index.cshtml
+++ b/LMS System/Views/Activities/Index.cshtml
@@ -18,61 +18,62 @@
     }
    
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </th>
-        <th></th>
-    </tr>
+<table class="table table-bordered lms">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+        @foreach (var item in Model)
+        {
 
-@foreach (var item in Model)
-{
-    
-   @Html.Hidden("ModuleId", item.ModuleId)
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDate)
-        </td>
-        <td>
-            @if (User.IsInRole("teacher"))
+            @Html.Hidden("ModuleId", item.ModuleId)
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+                <td>
+                    @if (User.IsInRole("teacher"))
                 {
-                <div>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })|
-                    @Html.ActionLink("Details", "Details", new { id = item.Id })
-                </div>
-            }
-            @if (User.IsInRole("student"))
-            {
-                <div>
-                    @Html.ActionLink("Details", "Details", new { id = item.Id })
-                </div>
-            }
-            else
-            {
-                @Html.ActionLink("Details", "Details", new { id = item.Id })
-            }
-        </td>
-    </tr>
-}
+                        <div>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })|
+                            @Html.ActionLink("Details", "Details", new { id = item.Id })
+                        </div>
+                    }
+                    @if (User.IsInRole("student"))
+                {
+                        <div>
+                            @Html.ActionLink("Details", "Details", new { id = item.Id })
+                        </div>
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    }
+                </td>
+            </tr>
+        }
 
 </table>
