--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -27,14 +27,10 @@
 }
 else
 {
-    <div>
-        @Html.ActionLink("Show students", "CourseTeacherView", "Account",
-                                                 new { id = Model.Id, orderBy = "firstname" },
-                                                 new { @class = "btn btn-default" })
-        @Html.ActionLink("Show Schedule", "Schedule", "Courses",
-                                                       new { id = Model.Id },
-                                                       new { @class = "btn btn-default" })
-        @Html.ActionLink("Upload or view files", "IndexFiles", new { parentId = Model.Id }, new { @class = "btn btn-default" })
+    <div class="control">
+        <a href="@Url.Action("CourseTeacherView", "Account", new { id = Model.Id, orderBy = "firstname" })" class="btn btn-default"><span class="glyphicon glyphicon-user"></span> Add student</a>
+        <a href="@Url.Action("Schedule", "Courses", new { id = Model.Id })" class="btn btn-default"><span class="glyphicon glyphicon-th-list"></span> Show Schedule</a>
+        <a href="@Url.Action("IndexFiles", "Courses", new { parentId = Model.Id })" class="btn btn-default"><span class="glyphicon glyphicon-th-list"></span> Upload or view files</a>
     </div>
 }
 
