Index files glyph

--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -12,17 +12,11 @@
 @if (User.IsInRole("teacher"))
 {
 <div class="control">
-    @Html.ActionLink("Add module", "Create", "Modules",
-    new { id = Model.Id },
-    new { @class = "btn btn-default" })
-    @Html.ActionLink("Add student", "CourseTeacherView", "Account",
-    new { id = Model.Id, orderBy = "firstname" },
-    new { @class = "btn btn-default" })
-    @Html.ActionLink("Show Schedule", "Schedule", "Courses",
-    new { id = Model.Id },
-    new { @class = "btn btn-default" })
-    @Html.ActionLink("Upload or view files", "IndexFiles", new { parentId = Model.Id }, new { @class = "btn btn-default" })
 
+
+    
+
+    <a href="@Url.Action(" IndexFiles", "Courses" , new { parentId=Model.Id })" class="btn btn-default"><span class="glyphicon glyphicon-upload"></span> Upload or view files</a>
 
     <a href="@Url.Action(" Create", "Modules" , new { id=Model.Id })" class="btn btn-default"><span class="glyphicon glyphicon-align-justify"></span> Add module</a>
     <a href="@Url.Action(" CourseTeacherView", "Account" , new { id=Model.Id, orderBy="firstname" })" class="btn btn-default"><span class="glyphicon glyphicon-user"></span> Add student</a>
