--- a/LMS System/Views/Activities/Details.cshtml
+++ b/LMS System/Views/Activities/Details.cshtml
@@ -5,53 +5,54 @@
 }
 
 <h2>Details</h2>
+<br />
+<br />
+<div class="control">
+    @Html.ActionLink("Upload or view files", "IndexFiles", new { parentId = Model.Id, ActivityId = Model.Id }, new { @class = "btn btn-default" })
+    </div>
 
+    <div>
+        <h4>Activity</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-@Html.ActionLink("Upload or view files", "IndexFiles", new { parentId = Model.Id, ActivityId = Model.Id }, new { @class = "btn btn-default" })
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
 
-<div>
-    <h4>Activity</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.StartDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EndDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-
-    </dl>
-</div>
-<p>
-@if (User.IsInRole("teacher"))
-{
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id })    <span> | </span>
-}
-    @Html.ActionLink("Back to List", "Details", "Modules", new { Id = Model.ModuleId }, null)
-</p>
+        </dl>
+    </div>
+    <p>
+        @if (User.IsInRole("teacher"))
+        {
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id })    <span> | </span>
+        }
+        @Html.ActionLink("Back to List", "Details", "Modules", new { Id = Model.ModuleId }, null)
+    </p>
